# mini-projet-breakout_game

./: README.md  pyproject.toml  seance_2024-12-13.md  seance_2025-01-07.md
breakout/: __main__.py  animation.py  ball.py  bonus.py  breakout.py  brick_field.py  constants.py  game_object.py  histoire.txt  menu.py  racket.py  save.txt  test_breakout.py
